--- a/etp/src/app/modules/home/about/about.component.html
+++ b/etp/src/app/modules/home/about/about.component.html
@@ -5,7 +5,7 @@
     <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9 mt-9">
       <span
         data-aos="fade-up"
-        class="d-block text-primary font-size-1 font-weight-medium text-uppercase mb-2"
+        class="d-block text-secondary font-size-1 font-weight-medium text-uppercase mb-2"
         i18n
         >ABOUT US</span
       >
@@ -42,7 +42,7 @@
                 data-aos-duration="1000"
               >
                 <div class="media-body">
-                  <h3 class="h6 text-center text-primary" i18n>
+                  <h3 class="h6 text-center text-secondary" i18n>
                     Peer-to-Peer Energy Trading
                   </h3>
                   <p class="mb-0 text-justify" i18n>
