--- a/etp/src/app/modules/home/contact/contact.component.html
+++ b/etp/src/app/modules/home/contact/contact.component.html
@@ -41,7 +41,7 @@
               data-aos="fade-up"
               data-aos-duration="1000"
               data-aos-delay="1200"
-              class="text-primary"
+              class="text-secondary"
               i18n
             >
               Find the right solution.
