--- a/etp/src/app/modules/home/hero/hero.component.html
+++ b/etp/src/app/modules/home/hero/hero.component.html
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="col-md-6 px-0">
-        <div class="bg-secondary w-100">
+        <div class="bg-dark w-100">
           <div class="container space-2 col-8 m-auto">
             <a href="/auth" routerLink="/auth"
               ><h3 class="h5 text-white">Get Started as a Consumer</h3>
