--- a/etp/src/app/modules/home/why/why.component.html
+++ b/etp/src/app/modules/home/why/why.component.html
@@ -4,7 +4,7 @@
   <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9">
     <span
       data-aos="fade-up"
-      class="d-block text-primary font-size-1 font-weight-medium text-uppercase mb-2"
+      class="d-block text-secondary font-size-1 font-weight-medium text-uppercase mb-2"
       i18n
       >Why Energy Trading Platform</span
     >
