--- a/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
@@ -11,27 +11,29 @@
     <button mat-raised-button class="reload" i18n>RELOAD</button>
   </div>
   <div class="menu-item mx-4"></div>
-  <div class="menu-item">
-    <div class="item">
-      <div class="h-50 w-25 mx-2">
-        <img src="/assets/svg/panel.svg" alt="panel" class="img-fluid" />
+  <div class="menu-item" (click)="set.powerflow = !set.powerflow">
+    <div class="menu-item">
+      <div class="item">
+        <div class="h-50 w-25 mx-2">
+          <img src="/assets/svg/panel.svg" alt="panel" class="img-fluid" />
+        </div>
+        <span>{{ data?.installedPower.pv }}</span>
+        <span class="subs">KWH</span>
       </div>
-      <span>{{ data?.installedPower.pv }}</span>
-      <span class="subs">KWH</span>
     </div>
-  </div>
-  <div class="menu-item">
-    <div class="item">
-      <i class="material-icons text-primary">battery_charging_full</i>
-      <div class="progress item">
-        <div
-          class="progress-bar bg-primary"
-          role="progressbar"
-          style="width: 60%;"
-          aria-valuenow="65"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        ></div>
+    <div class="menu-item">
+      <div class="item">
+        <i class="material-icons text-primary">battery_charging_full</i>
+        <div class="progress item">
+          <div
+            class="progress-bar bg-primary"
+            role="progressbar"
+            style="width: 60%;"
+            aria-valuenow="65"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
+        </div>
       </div>
     </div>
   </div>
