updated translations and registeration form

--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.scss
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.scss
@@ -1,2 +1,6 @@
 @import "../signin/signin.component.scss";
 @import "variables.scss";
+
+.custom-select {
+  padding: 0.375rem 1.75rem 0.375rem 0.75rem !important;
+}
