--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -68,7 +68,7 @@
                     *ngIf="item.status === 'setting'"
                   ></i>
                 </div>
-                <div class="right text-white message" i18n>
+                <div class="right text-white message">
                   {{
                     url === "en" ? item.messageEN : (item.messageTR | titlecase)
                   }}
