--- a/etp/src/app/modules/home/hero/hero.component.html
+++ b/etp/src/app/modules/home/hero/hero.component.html
@@ -19,6 +19,7 @@
               <span
                 class="d-block h4 text-white font-weight-light mb-2"
                 data-scs-animation-in="fadeInUp"
+                i18n
               >
                 Welcome to
               </span>
@@ -26,11 +27,12 @@
                 class="text-white display-4 font-size-md-down-5 mb-0"
                 data-scs-animation-in="fadeInUp"
                 data-scs-animation-delay="200"
+                i18n
               >
                 Energy <span class="font-weight-semi-bold">Trading</span>
                 Platform
               </h1>
-              <p>By solar bankers</p>
+              <p class="text" i18n>By solar bankers</p>
             </div>
           </div>
         </div>
@@ -61,6 +63,7 @@
                   class="text-white display-4 font-size-md-down-5 mb-0"
                   data-scs-animation-in="fadeInUp"
                   data-scs-animation-delay="200"
+                  i18n
                 >
                   <span class="font-weight-semi-bold"> An Easy</span> Way to Buy
                   and Sell Electricity
@@ -82,11 +85,11 @@
           <div class="container space-2 col-8 m-auto">
             <a href="/auth" routerLink="/auth"
               ><h3 class="h5 text-muted">
-                <span class="d-block text-secondary"
+                <span class="d-block text-secondary" i18n
                   >Get Started as a prosumer</span
                 >
               </h3>
-              <p class="mb-0">
+              <p class="mb-0" i18n>
                 Manage your Electricity and sell your Extra Easily
               </p></a
             >
@@ -97,8 +100,8 @@
         <div class="bg-dark w-100">
           <div class="container space-2 col-8 m-auto">
             <a href="/auth" routerLink="/auth"
-              ><h3 class="h5 text-white">Get Started as a Consumer</h3>
-              <p class="text-white-70 mb-0">
+              ><h3 class="h5 text-white" i18n>Get Started as a Consumer</h3>
+              <p class="text-white-70 mb-0" i18n>
                 Manage your Electricity Easily
               </p></a
             >
