--- a/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.html
@@ -24,14 +24,14 @@
       *ngIf="set.powerflow"
     >
       <div class="container box">
-        <div class="pw-title">
+        <div class="pw-title" i18n>
           POWER FLOW
         </div>
 
         <div class="row">
           <div class="top justify-content-center d-flex col-12">
             <div class="circle-container">
-              <p class="label mb-0 text-center mx-auto">Solar</p>
+              <p class="label mb-0 text-center mx-auto" i18n>Solar</p>
               <div class="circle solar">
                 <i class="flaticon-066-solar-energy"></i>
                 <span> 40 kW</span>
@@ -41,13 +41,13 @@
 
           <div class="middle d-flex d-flex justify-content-between col-12">
             <div class="circle-container">
-              <p class="label mb-0 text-center mx-auto">Grid</p>
+              <p class="label mb-0 text-center mx-auto" i18n>Grid</p>
               <div class="circle grid">
                 <i class="flaticon-021-electric-tower-1" style="top: 16px;"></i>
               </div>
             </div>
             <div class="circle-container">
-              <p class="label mb-0 text-center mx-auto">Home</p>
+              <p class="label mb-0 text-center mx-auto" i18n>Home</p>
               <div class="circle home">
                 <i class="icon-home" style="top: 11px; left: 25px;"></i>
                 <span> 40 kW</span>
@@ -60,7 +60,7 @@
                 <i class="flaticon-047-battery"></i>
                 <span style="left: 28px;"> 80% </span>
               </div>
-              <p class="label mb-0 text-center mx-auto">Battery</p>
+              <p class="label mb-0 text-center mx-auto" i18n>Battery</p>
             </div>
           </div>
         </div>
