--- a/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.scss
+++ b/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.scss
@@ -38,7 +38,7 @@
     background-color: $bg1;
     width: auto;
     top: 100%;
-    left: 30%;
+    right: 30%;
     height: auto;
     padding: 30px 0;
     border-bottom-left-radius: 4px;
