--- a/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
@@ -21,7 +21,7 @@
         <span class="subs">KWH</span>
       </div>
     </div>
-    <div class="menu-item">
+    <div class="menu-item mx-4">
       <div class="item">
         <i class="material-icons text-primary">battery_charging_full</i>
         <div class="progress item">
@@ -36,5 +36,6 @@
         </div>
       </div>
     </div>
+    <p class="caret-down" i18n>check power flow</p>
   </div>
 </div>
