--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
@@ -52,24 +52,28 @@
           <div class="row">
             <div class="col-6 ml-auto">
               <div class="form-group">
-                <label for="city" i18n>City</label>
-                <input
-                  [class.is-invlaid]="City.invalid && City.touched"
-                  class="form-control"
+                <label for="City">City</label>
+                <select
+                  class="custom-select"
                   formControlName="city"
-                  type="text"
-                />
+                  [class.is-invalid]="City.value === '' && City.touched"
+                >
+                  <option [ngValue]="''">Select one</option>
+                  <option [ngValue]="'Izmir'">Izmir</option>
+                </select>
               </div>
             </div>
             <div class="col-6 mr-auto">
               <div class="form-group">
-                <label for="state" i18n>State</label>
-                <input
-                  [class.is-invalid]="State.invalid && State.touched"
-                  class="form-control"
+                <label for="State">State</label>
+                <select
+                  class="custom-select"
                   formControlName="state"
-                  type="text"
-                />
+                  [class.is-invalid]="State.value === '' && State.touched"
+                >
+                  <option [ngValue]="''">Select one</option>
+                  <option [ngValue]="'Izmir'">Izmir</option>
+                </select>
               </div>
             </div>
           </div>
