--- a/etp/src/app/modules/home/hero/hero.component.html
+++ b/etp/src/app/modules/home/hero/hero.component.html
@@ -2,18 +2,15 @@
 <div class="u-hero-v1">
   <!-- Hero Carousel Main -->
   <ngb-carousel>
-    <ng-template
-      ngbSlide
-      class="animate__animated animate__fadeIn animate__slow"
-    >
+    <ng-template ngbSlide>
       <!-- Slide #1 -->
       <div
-        class="d-lg-flex align-items-lg-center u-hero-v1__main animate__animated animate__fadeInRight animate__slow"
-        style="
-          background-image: url(https://img.freepik.com/free-photo/group-businesspeople-with-energy-saving-concept-white-background_23-2147826623.jpg?size=626&ext=jpg&uid=R16664828&ga=GA1.2.461699731.1589202714);
-        "
+        class="d-lg-flex align-items-lg-center u-hero-v1__main"
+        style="background-image: url(/assets/img/carousel1.jpg);"
       >
-        <div class="container space-3 space-top-md-5 space-top-lg-3">
+        <div
+          class="container space-3 space-top-md-5 space-top-lg-3 space-left2"
+        >
           <div class="row">
             <div class="col-md-8 col-lg-6 position-relative">
               <span
@@ -32,33 +29,27 @@
                 Energy <span class="font-weight-semi-bold">Trading</span>
                 Platform
               </h1>
-              <p class="text" i18n>By solar bankers</p>
+              <p class="text" i18n>
+                By solar bankers
+              </p>
             </div>
           </div>
         </div>
       </div>
       <!-- End Slide #1 -->
     </ng-template>
-    <ng-template
-      ngbSlide
-      class="animate__animated animate__fadeIn animate__slow"
-    >
+    <ng-template ngbSlide>
       <div>
         <!-- Slide #2 -->
         <div
-          class="d-lg-flex align-items-lg-center u-hero-v1__main animate__animated animate__fadeInRight animate__slow"
-          style="
-            background-image: url(https://img.freepik.com/free-photo/close-up-woman-s-hand-holding-green-batteries_23-2147839003.jpg?size=626&ext=jpg&uid=R16664828&ga=GA1.2.461699731.1589202714);
-          "
+          class="d-lg-flex align-items-lg-center u-hero-v1__main"
+          style="background-image: url(/assets/img/carousel2.jpg);"
         >
-          <div class="container space-3 space-top-md-5 space-top-lg-3">
+          <div
+            class="container space-3 space-top-md-5 space-top-lg-3 space-left2"
+          >
             <div class="row">
               <div class="col-md-8 col-lg-6">
-                <span
-                  class="d-block h4 text-white font-weight-light mb-2"
-                  data-scs-animation-in="fadeInUp"
-                >
-                </span>
                 <h2
                   class="text-white display-4 font-size-md-down-5 mb-0"
                   data-scs-animation-in="fadeInUp"
@@ -79,7 +70,7 @@
   <!-- Slide #2 -->
 
   <div>
-    <div class="row mx-0">
+    <div class="row" style="margin-left: 0; margin-right: 0;">
       <div class="col-md-6 px-0">
         <div class="bg-white">
           <div class="container space-2 col-8 m-auto">
