--- a/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
@@ -25,6 +25,16 @@
       <i class="material-icons">battery_charging_full</i>
     </button>
   </div>
+  <div class="item">
+    <button mat-stroked-button (click)="set.powerflow = !set.powerflow">
+      <i class="material-icons">
+        offline_bolt
+      </i>
+    </button>
+  </div>
+  <!-- end of sticy bar  -->
+
+  <!-- toggle bar  -->
 </div>
 <div
   class="sticky-barside"
