--- a/etp/src/assets/scss/front/headers/_header-navbar-expand.scss
+++ b/etp/src/assets/scss/front/headers/_header-navbar-expand.scss
@@ -131,6 +131,7 @@
         .u-header__nav-last-item {
           // display: none;
           text-align: right;
+          margin-bottom: 10px;
         }
 
         .u-header__nav-link,
