--- a/etp/src/app/modules/home/why/why.component.html
+++ b/etp/src/app/modules/home/why/why.component.html
@@ -36,7 +36,7 @@
         </figure>
         <div
           class="media-body"
-          data-aos="fade-left"
+          data-aos="fade-right"
           data-aos-duration="1000"
           data-aos-delay="1200"
         >
