--- a/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topbar/topbar.component.html
@@ -20,8 +20,9 @@
     <div class="mx-2" *ngIf="!(set.isTablet$ | async)"></div>
     <etp-profilebar></etp-profilebar>
     <div
-      class="powerflow-dropdown animate__animated animate__slideInDown"
-      *ngIf="set.powerflow"
+      class="powerflow-dropdown animate__animated"
+      [class.animate__slideInDown]="set.powerflow"
+      [class.animate__fadeOut]="!set.powerflow"
     >
       <div class="container box">
         <div class="pw-title" i18n>
@@ -32,7 +33,13 @@
           <div class="top justify-content-center d-flex col-12">
             <div class="circle-container">
               <p class="label mb-0 text-center mx-auto" i18n>Solar</p>
-              <div class="circle solar">
+              <div
+                class="circle"
+                [class.solar]="solar_battery || solar_home"
+                (click)="
+                  solar_home = !solar_home; solar_battery = !solar_battery
+                "
+              >
                 <i class="flaticon-066-solar-energy"></i>
                 <span> 40 kW</span>
               </div>
@@ -42,21 +49,35 @@
           <div class="middle d-flex d-flex justify-content-between col-12">
             <div class="circle-container">
               <p class="label mb-0 text-center mx-auto" i18n>Grid</p>
-              <div class="circle grid">
-                <i class="flaticon-021-electric-tower-1" style="top: 16px;"></i>
+              <div
+                class="circle"
+                [class.grid]="gride_home"
+                (click)="gride_home = !gride_home"
+              >
+                <i class="flaticon-021-electric-tower-1" style="top: 17px;"></i>
               </div>
             </div>
             <div class="circle-container">
               <p class="label mb-0 text-center mx-auto" i18n>Home</p>
-              <div class="circle home">
-                <i class="icon-home" style="top: 11px; left: 25px;"></i>
+              <div
+                class="circle"
+                [class.home]="gride_home || solar_home || battery_home"
+              >
+                <i
+                  class="icon-home"
+                  style="top: 17px; left: 29px; font-size: 26px;"
+                ></i>
                 <span> 40 kW</span>
               </div>
             </div>
           </div>
           <div class="bottom justify-content-center d-flex col-12">
             <div class="circle-container">
-              <div class="circle battery">
+              <div
+                class="circle"
+                [class.battery]="battery_home || solar_battery"
+                (click)="battery_home = !battery_home"
+              >
                 <i class="flaticon-047-battery"></i>
                 <span style="left: 28px;"> 80% </span>
               </div>
@@ -64,14 +85,20 @@
             </div>
           </div>
         </div>
-        <div class="straight-path down">
+        <div class="straight-path down" [class.d-none]="!solar_battery">
           <div class="shape trail-down"></div>
         </div>
-        <div class="straight-path lefts">
-          <div class="shape trail-left"></div>
+        <div class="straight-path accross" [class.d-none]="!gride_home">
+          <div class="shape trail-accross"></div>
         </div>
-        <div class="straight-path rights">
+        <!-- <div class="straight-path lefts">
+          <div class="shape trail-left"></div>
+        </div> -->
+        <div class="straight-path rights" [class.d-none]="!solar_home">
           <div class="shape trail-right"></div>
+        </div>
+        <div class="straight-path up-right" [class.d-none]="!battery_home">
+          <div class="shape trail-up-right"></div>
         </div>
       </div>
     </div>
